log
Tue 11 Apr 2023 10:29:31 PM UTC: 
 tests:  0|6
total_score: 0/70
46e2f55
Tue 11 Apr 2023 10:47:12 PM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
5925797
Tue 11 Apr 2023 10:48:37 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
fe652a2
Tue 11 Apr 2023 10:53:01 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|6
total_score: 0/70
bcf213c
Tue 11 Apr 2023 10:54:33 PM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|6
total_score: 0/70
fe96281
Tue 11 Apr 2023 10:55:02 PM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|6
total_score: 0/70
3600db8
Tue 11 Apr 2023 10:55:22 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
dd8b791
Tue 11 Apr 2023 10:58:04 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
8bf5822
Tue 11 Apr 2023 11:00:54 PM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|6
total_score: 0/70
d9bf9ce
Tue 11 Apr 2023 11:06:18 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
2d43bdc
Tue 11 Apr 2023 11:06:59 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:75:27: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   75 |                 free(map->bucket[j]);
      |                           ^~~~~~
      |                           buckets
Compilation failed
d41971a
Tue 11 Apr 2023 11:07:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
a20db5d
Tue 11 Apr 2023 11:09:14 PM UTC: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|6
total_score: 0/70
d86bbdf
Tue 11 Apr 2023 11:09:33 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
591d519
Tue 11 Apr 2023 11:10:14 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
13c1b2e
Tue 11 Apr 2023 11:15:02 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
4a4b21e
Tue 11 Apr 2023 11:16:44 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
4d4b3b9
Tue 11 Apr 2023 11:17:26 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
774b32d
Tue 11 Apr 2023 11:17:37 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
459cca7
Tue 11 Apr 2023 11:18:13 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
5a8b27e
Tue 11 Apr 2023 11:18:18 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
a126995
Tue 11 Apr 2023 11:20:51 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
46170e0
Tue 11 Apr 2023 11:28:49 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
1242d14
Wed 12 Apr 2023 10:07:27 PM UTC: 
 hashmap.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
 tests:  0|0
6e4c74f
Wed 12 Apr 2023 10:07:44 PM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|5
total_score: 10/70
5c2f71d
Wed 12 Apr 2023 10:20:09 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|0
5491b28
Wed 12 Apr 2023 10:21:56 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
2d92944
Wed 12 Apr 2023 10:22:49 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
c6b50e8
Wed 12 Apr 2023 10:26:18 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
8a1079f
Wed 12 Apr 2023 10:29:40 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
ac43816
Wed 12 Apr 2023 10:30:16 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
0ed9bc3
Wed 12 Apr 2023 10:33:59 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
5e24958
Wed 12 Apr 2023 10:37:12 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
03ed6e0
Wed 12 Apr 2023 10:37:41 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
6c21cb6
